# XADE

./: .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: detect.py  vlm.py
backend/app/db/: __init__.py  database.py
backend/app/dependencies/: auth.py
backend/app/routers/: analyses.py  auth.py  images.py  study.py
backend/app/schemas/: __init__.py  models.py
backend/app/services/: __init__.py  categories.py  face_category_mapper.py  face_parser.py  gradcam_service.py  gradcam_storage.py  region_ranker.py
backend/app/services/forensics/: __init__.py  ela.py  real_distribution.json  report.py  sharpness.py  spectrum.py  zscore.py
backend/app/utils/: __init__.py  model_loader.py
backend/checkpoints/: training_results.json
backend/models/: evaluate_model.py  train_detector.py
backend/results/: evaluation_metrics.json  metrics_table.tex
backend/scripts/: build_reference_distribution.py  compare_cams.py  download_ffhq.py  fine_tune_ffhq_sg3.py  generate_sg3.py  prepare_ciplab.py  prepare_dataset.py  prepare_ffhq_sg3.py  render_study_artifacts.py  run_ciplab_eval.py  show_study_results.py  validate_study_analyses.py
backend/tests/: test_attach_region_comments.py  test_categories.py  test_face_parser.py  test_forensics.py  test_prompt_builder.py  test_region_ranker.py  test_structured_schema.py  test_zscore.py
desktop/: .env.example  (+6 more)
(+64 files in other folders)
